Implement universal image selection generator